--- a/fulfillorderack.yaml
+++ b/fulfillorderack.yaml
@@ -22,6 +22,8 @@ spec:
             value: "team6"
           - name: MONGOURL
             value: "mongodb://etorodb:Aa123456!@etoro-mongo-mongodb/database.default"
+        imagerPullSecrets:
+          - name: eyalreg
         ports:
           - containerPort: 8080
             protocol: TCP
