--- a/fulfillorderack.yaml
+++ b/fulfillorderack.yaml
@@ -28,7 +28,7 @@ spec:
           requests:
             memory: "64Mi"
             cpu: "250m"
-          linits:
+          limits:
             memory: "128Mi"
             cpu: "500m"
         ports:
